@@ -1,16 +1,19 @@
-package de.jplag;
+package de.jplag.comparison;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
 import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentMap;
 import java.util.stream.Collectors;
 
+import de.jplag.JPlagComparison;
+import de.jplag.Match;
+import de.jplag.Submission;
+import de.jplag.Token;
 import de.jplag.options.JPlagOptions;
 
 /**
@@ -22,14 +25,13 @@ import de.jplag.options.JPlagOptions;
  * String Similarity via Greedy String Tiling and Running Karp−Rabin Matching </a>
  */
 public class GreedyStringTiling {
-
     private final int minimumMatchLength;
     private final JPlagOptions options;
-    private final ConcurrentMap<TokenType, Integer> tokenTypeValues;
     private final Map<Submission, Set<Token>> baseCodeMarkings = new IdentityHashMap<>();
 
-    private final Map<Submission, int[]> cachedTokenValueLists = new IdentityHashMap<>();
-    private final Map<Submission, SubsequenceHashLookupTable> cachedHashLookupTables = new IdentityHashMap<>();
+    private final Map<Submission, SubsequenceHashLookupTable> cachedHashLookupTables = Collections.synchronizedMap(new IdentityHashMap<>());
+
+    private final TokenValueMapper tokenValueMapper;
 
     private static final String ERROR_INDEX_OUT_OF_BOUNDS = """
                 GST index out of bounds. This is probably a random issue caused by multithreading issues.
@@ -40,19 +42,20 @@ public class GreedyStringTiling {
                 Submission (other): %s
             """.trim().stripIndent();
 
-    public GreedyStringTiling(JPlagOptions options) {
+    public GreedyStringTiling(JPlagOptions options, TokenValueMapper tokenValueMapper) {
         this.options = options;
         // Ensures 1 <= neighborLength <= minimumTokenMatch
-        int minimumNeighborLength = Math.min(Math.max(options.mergingOptions().minimumNeighborLength(), 1), options.minimumTokenMatch());
+        int minimumNeighborLength = Math.clamp(options.mergingOptions().minimumNeighborLength(), 1, options.minimumTokenMatch());
+
         this.minimumMatchLength = options.mergingOptions().enabled() ? minimumNeighborLength : options.minimumTokenMatch();
-        this.tokenTypeValues = new ConcurrentHashMap<>();
-        this.tokenTypeValues.put(SharedTokenType.FILE_END, 0);
+
+        this.tokenValueMapper = tokenValueMapper;
     }
 
     /**
      * Compares the given submission with the base code submission. Marks the identified base code sections in the
      * submission such that further comparisons do not generate matches for these parts. Must be called before generating a
-     * comparison with a regular submission for the given submission.
+     * comparison with a regular submission for the given submission. THIS METHOD IS NOT THREAD-SAFE.
      * @param submission is the submission to generate base-code markings for.
      * @param baseCodeSubmission is the base code submission.
      * @return the comparison of the submission with the base code submission.
@@ -79,8 +82,8 @@ public class GreedyStringTiling {
     }
 
     /**
-     * Compares the two submissions and generates matches between them. To exclude base code from the result, call
-     * {@link #generateBaseCodeMarking} with each submission beforehand.
+     * Compares the two submissions in a thread-safe manner and generates matches between them. To exclude base code from
+     * the result, call {@link #generateBaseCodeMarking} with each submission beforehand.
      * @param firstSubmission is one of the two submissions.
      * @param secondSubmission is the other of the two submissions.
      * @return the comparison between the two submissions.
@@ -108,8 +111,8 @@ public class GreedyStringTiling {
      * @return the comparison results.
      */
     private JPlagComparison compareInternal(Submission leftSubmission, Submission rightSubmission) {
-        int[] leftValues = tokenValueListFromSubmission(leftSubmission);
-        int[] rightValues = tokenValueListFromSubmission(rightSubmission);
+        int[] leftValues = this.tokenValueMapper.getTokenValuesFor(leftSubmission);
+        int[] rightValues = this.tokenValueMapper.getTokenValuesFor(rightSubmission);
 
         boolean[] leftMarked = calculateInitiallyMarked(leftSubmission);
         boolean[] rightMarked = calculateInitiallyMarked(rightSubmission);
@@ -212,40 +215,21 @@ public class GreedyStringTiling {
         List<Token> tokens = submission.getTokenList();
         boolean[] result = new boolean[tokens.size()];
         for (int i = 0; i < result.length; i++) {
-            result[i] = tokens.get(i).getType().isExcludedFromMatching() || (baseCodeTokens != null && baseCodeTokens.contains(tokens.get(i)));
+            result[i] = tokens.get(i).getType().isExcludedFromMatching() || baseCodeTokens != null && baseCodeTokens.contains(tokens.get(i));
         }
         return result;
     }
 
     private SubsequenceHashLookupTable subsequenceHashLookupTableForSubmission(Submission submission, boolean[] marked) {
         return cachedHashLookupTables.computeIfAbsent(submission,
-                (key -> new SubsequenceHashLookupTable(minimumMatchLength, tokenValueListFromSubmission(key), marked)));
-    }
-
-    /**
-     * Converts the tokens of the submission to a list of values.
-     * @param submission The submission from which to convert the tokens.
-     */
-    private int[] tokenValueListFromSubmission(Submission submission) {
-        return cachedTokenValueLists.computeIfAbsent(submission, (key -> {
-            List<Token> tokens = key.getTokenList();
-            int[] tokenValueList = new int[tokens.size()];
-            for (int i = 0; i < tokens.size(); i++) {
-                TokenType type = tokens.get(i).getType();
-                synchronized (tokenTypeValues) {
-                    tokenTypeValues.putIfAbsent(type, tokenTypeValues.size());
-                }
-                tokenValueList[i] = tokenTypeValues.get(type);
-            }
-            return tokenValueList;
-        }));
+                key -> new SubsequenceHashLookupTable(minimumMatchLength, this.tokenValueMapper.getTokenValuesFor(submission), marked));
     }
 
     private boolean checkMark(boolean[] marks, int index, Submission submission, Submission otherSubmission) {
         if (index >= marks.length) {
             throw new IllegalStateException(String.format(ERROR_INDEX_OUT_OF_BOUNDS, marks.length, index, submission.getTokenList().size(),
                     submission.getTokenList().stream().map(it -> it.getType().getDescription()).collect(Collectors.joining(", ")),
-                    cachedTokenValueLists.get(submission).length, submission.getName(), otherSubmission.getName()));
+                    this.tokenValueMapper.getTokenValuesFor(submission).length, submission.getName(), otherSubmission.getName()));
         }
 
         return marks[index];
